Actual fix for topbar z-index issue

--- a/_sass/minimal-mistakes/_topbar.scss
+++ b/_sass/minimal-mistakes/_topbar.scss
@@ -15,7 +15,6 @@
     animation: $intro-transition;
     -webkit-animation-delay: 0.15s;
     animation-delay: 0.15s;
-    z-index: 20;
     background-color: $subheader-background-color;
 
     .nav__list {
